# screeningtale_backend

./: .gitignore  docker-compose.override.yml  docker-compose.yml  example.env  readme.md  traefik.yml
backend/app/: beat-start.sh  pyproject.toml  start-reload.sh  start.sh  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 41521c355323_initial_create_tables.py  85b679f4d671_added_auth_tables.py  8b2f1bc0dede_added_fields_for_stripe.py  9c736770cf71_create_screener_tables.py  bd5a839b05ca_added_market_cap_usd.py
backend/app/app/: backend_pre_start.py  celeryworker_pre_start.py  config.py  config_redis.py  main.py  pre_seed_db.py
backend/app/app/api/: dependencies.py
backend/app/app/api/api_v1/: api.py
backend/app/app/core/: auth.py  security.py
backend/app/app/crud/: __init__.py  crud_stocks.py  crud_stripe.py  crud_users.py  crud_utils.py
backend/app/app/db/: base_alembic.py  pre_seed_db.py  session.py
backend/app/app/models/: __init__.py  criterium.py  historical.py  screener.py  screening_ticker.py  users.py
backend/app/app/schemas/: __init__.py  stocks.py  stripe_payment.py  token.py  users.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/: test_healthcheck.py
backend/app/app/utils/: analytics.py  auth.py  closing_hours.py  countries.py  tickers.py
backend/app/app/utils/api_route_classes/: ratelimit.py
backend/app/app/utils/make_dataset/: __init__.py  columns.py  (+2 more)
backend/app/app/worker/: __init__.py  insert_historical.py  readme.md  send_mail.py  test.py
backend/app/scripts/: format.sh  lint.sh
(+17 files in other folders)
